force-app/main/default/objects/DM_Production__c/DM_Production__c.object-meta.xml
<CustomObject>
    <label>Production</label>
    <nameField>
        <displayFormat>PROD-{0000}</displayFormat>
        <label>Production #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>