force-app/main/default/objects/DM_Production__c/fields/DM_Actual_Yield__c.field-meta.xml
<CustomField>
    <fullName>DM_Actual_Yield__c</fullName>
    <label>Actual Yield</label>
    <summarizedField>DM_Harvest__c.DM_Harvest_Quantity__c</summarizedField>
    <summaryForeignKey>DM_Harvest__c.DM_Production__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>