force-app/main/default/objects/DM_Production__c/fields/DM_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Application_Date__c</fullName>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>