force-app/main/default/objects/DM_Production__c/fields/DM_Application_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Application_Method__c</fullName>
    <label>Application Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foliar Spray</fullName>
            </value>
            <value>
                <fullName>Drip Irrigation</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
            <value>
                <fullName>Soil Incorporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>