force-app/main/default/objects/DM_Production__c/fields/DM_Applied_in_Full__c.field-meta.xml
<CustomField>
    <fullName>DM_Applied_in_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied in Full</label>
    <type>Checkbox</type>
</CustomField>