force-app/main/default/objects/DM_Production__c/fields/DM_Batch__c.field-meta.xml
<CustomField>
    <fullName>DM_Batch__c</fullName>
    <displayFormat>Batch-{0000}</displayFormat>
    <label>Batch #</label>
    <type>AutoNumber</type>
</CustomField>