force-app/main/default/objects/DM_Production__c/fields/DM_Batch_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Batch_Complete_Date__c</fullName>
    <label>Batch Complete Date</label>
    <type>Date</type>
</CustomField>