force-app/main/default/objects/DM_Production__c/fields/DM_Block__c.field-meta.xml
<CustomField>
    <fullName>DM_Block__c</fullName>
    <label>Block</label>
    <length>80</length>
    <type>Text</type>
</CustomField>