force-app/main/default/objects/DM_Production__c/fields/DM_Cleaning_Agents_Used__c.field-meta.xml
<CustomField>
    <fullName>DM_Cleaning_Agents_Used__c</fullName>
    <label>Cleaning Agents Used</label>
    <type>TextArea</type>
</CustomField>