force-app/main/default/objects/DM_Production__c/fields/DM_Cleaning_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Cleaning_Method__c</fullName>
    <label>Cleaning Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pressure Wash</fullName>
                <default>true</default>
                <label>Pressure Wash</label>
            </value>
            <value>
                <fullName>Air Blast</fullName>
            </value>
            <value>
                <fullName>Manual Scrubbing</fullName>
            </value>
            <value>
                <fullName>Sanitizing</fullName>
            </value>
            <value>
                <fullName>Flushing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>