force-app/main/default/objects/DM_Production__c/fields/DM_Composting_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Composting_Method__c</fullName>
    <label>Composting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windrow Composting</fullName>
                <default>true</default>
                <label>Windrow Composting</label>
            </value>
            <value>
                <fullName>Vermicomposting</fullName>
            </value>
            <value>
                <fullName>Sheet Composting</fullName>
            </value>
            <value>
                <fullName>Hot Composting (Aerobic)</fullName>
            </value>
            <value>
                <fullName>Trench Composting</fullName>
            </value>
            <value>
                <fullName>In-Vessel Composting</fullName>
            </value>
            <value>
                <fullName>Anaerobic Composting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>