force-app/main/default/objects/DM_Production__c/fields/DM_Cost_of_Labor__c.field-meta.xml
<CustomField>
    <fullName>DM_Cost_of_Labor__c</fullName>
    <label>Cost of Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>