force-app/main/default/objects/DM_Production__c/fields/DM_Cost_of_Material_Production__c.field-meta.xml
<CustomField>
    <fullName>DM_Cost_of_Material_Production__c</fullName>
    <formula>if(NOT(ISNULL( DM_On_Premises_Production__c )), DM_Quantity_Planted__c * DM_On_Premises_Production__r.DM_Total_Unit_Cost_of_Production_Vendor__c,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost of Material</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>