force-app/main/default/objects/DM_Production__c/fields/DM_Cost_of_Material_Vendor__c.field-meta.xml
<CustomField>
    <fullName>DM_Cost_of_Material_Vendor__c</fullName>
    <formula>DM_Quantity_Planted__c * DM_Cost_per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost of Material</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>