force-app/main/default/objects/DM_Production__c/fields/DM_Cost_of_Water__c.field-meta.xml
<CustomField>
    <fullName>DM_Cost_of_Water__c</fullName>
    <label>Cost of Water</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>