force-app/main/default/objects/DM_Production__c/fields/DM_Cost_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>DM_Cost_per_Unit__c</fullName>
    <formula>if(text(DM_Material_Source__c) = &quot;Inventory&quot;, DM_Material__r.DM_Cost_per_Unit__c,DM_On_Premises_Production__r.DM_Material__r.DM_Cost_per_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>