force-app/main/default/objects/DM_Production__c/fields/DM_Crop_Rotation_Category__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Rotation_Category__c</fullName>
    <label>Crop Rotation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brassicas</fullName>
            </value>
            <value>
                <fullName>Grains</fullName>
            </value>
            <value>
                <fullName>Legumes</fullName>
            </value>
            <value>
                <fullName>Leafy Greens</fullName>
            </value>
            <value>
                <fullName>Nightshades</fullName>
            </value>
            <value>
                <fullName>Root Crops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>