force-app/main/default/objects/DM_Production__c/fields/DM_Crop_Stage__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Stage__c</fullName>
    <label>Crop Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Germination</fullName>
                <default>true</default>
                <label>Germination</label>
            </value>
            <value>
                <fullName>Seedling</fullName>
            </value>
            <value>
                <fullName>Vegetative</fullName>
            </value>
            <value>
                <fullName>Flowering</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Maturing</fullName>
            </value>
            <value>
                <fullName>Harvesting</fullName>
            </value>
            <value>
                <fullName>Production Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>