force-app/main/default/objects/DM_Production__c/fields/DM_Crop_Variety__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Variety__c</fullName>
    <formula>CASE( DM_Material_Source__c , 
&quot;Inventory&quot;,  DM_Material__r.DM_Crop_Variety__c , 
&quot;Production Site&quot;, DM_On_Premises_Production__r.DM_Material__r.DM_Crop_Variety__c   ,
&quot;Not Found&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crop Variety</label>
    <type>Text</type>
</CustomField>