force-app/main/default/objects/DM_Production__c/fields/DM_Curing_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Curing_Complete_Date__c</fullName>
    <label>Curing Complete Date</label>
    <type>Date</type>
</CustomField>