force-app/main/default/objects/DM_Production__c/fields/DM_Days_until_Harvest__c.field-meta.xml
<CustomField>
    <fullName>DM_Days_until_Harvest__c</fullName>
    <formula>DM_Related_Planting__r.DM_Planned_Harvest_Date__c -  DM_Application_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until Harvest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>