force-app/main/default/objects/DM_Production__c/fields/DM_Disposition_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Disposition_Method__c</fullName>
    <label>Disposition Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green Manure</fullName>
            </value>
            <value>
                <fullName>No-Till</fullName>
            </value>
            <value>
                <fullName>Grazing</fullName>
            </value>
            <value>
                <fullName>Mulch</fullName>
            </value>
            <value>
                <fullName>Seed Propagation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>