force-app/main/default/objects/DM_Production__c/fields/DM_Equipment__c.field-meta.xml
<CustomField>
    <fullName>DM_Equipment__c</fullName>
    <label>Equipment being Cleaned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>