force-app/main/default/objects/DM_Production__c/fields/DM_Feedstock_Materials__c.field-meta.xml
<CustomField>
    <fullName>DM_Feedstock_Materials__c</fullName>
    <label>Feedstock Materials</label>
    <type>TextArea</type>
</CustomField>