force-app/main/default/objects/DM_Production__c/fields/DM_Field__c.field-meta.xml
<CustomField>
    <fullName>DM_Field__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Field</label>
    <referenceTo>DM_Field__c</referenceTo>
    <relationshipLabel>Production</relationshipLabel>
    <relationshipName>Planting_Harvesting</relationshipName>
    <type>Lookup</type>
</CustomField>