force-app/main/default/objects/DM_Production__c/fields/DM_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_Field_Name__c</fullName>
    <formula>DM_Field__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field</label>
    <type>Text</type>
</CustomField>