force-app/main/default/objects/DM_Production__c/fields/DM_Harvest_Count__c.field-meta.xml
<CustomField>
    <fullName>DM_Harvest_Count__c</fullName>
    <label>Harvest Count</label>
    <summaryForeignKey>DM_Harvest__c.DM_Production__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>