force-app/main/default/objects/DM_Production__c/fields/DM_Input__c.field-meta.xml
<CustomField>
    <fullName>DM_Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Input</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DM_Material__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Inputs</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DM_Material__c</referenceTo>
    <relationshipLabel>Production (Input)</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>