force-app/main/default/objects/DM_Production__c/fields/DM_Input_Cost_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>DM_Input_Cost_per_Unit__c</fullName>
    <formula>DM_Input__r.DM_Cost_per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>