force-app/main/default/objects/DM_Production__c/fields/DM_Input_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Input_Type__c</fullName>
    <label>Input Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fertilizer</fullName>
            </value>
            <value>
                <fullName>Pesticide</fullName>
            </value>
            <value>
                <fullName>Soil Amendment</fullName>
            </value>
            <value>
                <fullName>Herbicide</fullName>
            </value>
            <value>
                <fullName>Mulch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>