force-app/main/default/objects/DM_Production__c/fields/DM_Input_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>DM_Input_Unit_of_Measure__c</fullName>
    <formula>text(DM_Input__r.DM_Quantity_Unit_of_Measure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>