force-app/main/default/objects/DM_Production__c/fields/DM_Inspected_by__c.field-meta.xml
<CustomField>
    <fullName>DM_Inspected_by__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inspected by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Production</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>