force-app/main/default/objects/DM_Production__c/fields/DM_Inspection_Results__c.field-meta.xml
<CustomField>
    <fullName>DM_Inspection_Results__c</fullName>
    <label>Inspection / Testing Results</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>