force-app/main/default/objects/DM_Production__c/fields/DM_Inspection_Test_Performed__c.field-meta.xml
<CustomField>
    <fullName>DM_Inspection_Test_Performed__c</fullName>
    <label>Inspection / Test Performed</label>
    <length>80</length>
    <type>Text</type>
</CustomField>