force-app/main/default/objects/DM_Production__c/fields/DM_Inventory_Source__c.field-meta.xml
<CustomField>
    <fullName>DM_Inventory_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Source</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DM_Inventory__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Material,Inputs</value>
        </filterItems>
        <filterItems>
            <field>DM_Inventory__c.DM_Remaining_Inventory__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>DM_Inventory__c</referenceTo>
    <relationshipLabel>Production</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>