force-app/main/default/objects/DM_Production__c/fields/DM_Irrigation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DM_Irrigation_Frequency__c</fullName>
    <label>Irrigation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Every Other Day</fullName>
            </value>
            <value>
                <fullName>Every Third Day</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>