force-app/main/default/objects/DM_Production__c/fields/DM_Irrigation_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Irrigation_Method__c</fullName>
    <label>Irrigation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drip</fullName>
            </value>
            <value>
                <fullName>Subsurface Drip</fullName>
            </value>
            <value>
                <fullName>Sprinkler</fullName>
            </value>
            <value>
                <fullName>Center Pivot</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Furrow</fullName>
            </value>
            <value>
                <fullName>Basin</fullName>
            </value>
            <value>
                <fullName>Rain Water Harvesting</fullName>
            </value>
            <value>
                <fullName>Hydroponic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>