force-app/main/default/objects/DM_Production__c/fields/DM_Material__c.field-meta.xml
<CustomField>
    <fullName>DM_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seed / Planting Stock</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DM_Material__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Seed &amp; Planting Stock</value>
        </filterItems>
        <filterItems>
            <field>DM_Material__c.DM_Remaining_Inventory__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>DM_Material__c</referenceTo>
    <relationshipLabel>Production (Seed / Planting Stock)</relationshipLabel>
    <relationshipName>Planting_Harvesting</relationshipName>
    <type>Lookup</type>
</CustomField>