force-app/main/default/objects/DM_Production__c/fields/DM_Material_Source__c.field-meta.xml
<CustomField>
    <fullName>DM_Material_Source__c</fullName>
    <label>Material Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventory</fullName>
                <default>true</default>
                <label>Stored in Inventory</label>
            </value>
            <value>
                <fullName>Production Site</fullName>
                <label>Stored in a Production Site</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>