force-app/main/default/objects/DM_Production__c/fields/DM_Packing_Activity__c.field-meta.xml
<CustomField>
    <fullName>DM_Packing_Activity__c</fullName>
    <label>Packing / Processing Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Washing</fullName>
            </value>
            <value>
                <fullName>Trimming</fullName>
            </value>
            <value>
                <fullName>Bagging</fullName>
            </value>
            <value>
                <fullName>Boxing</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>