force-app/main/default/objects/DM_Production__c/fields/DM_Parcel__c.field-meta.xml
<CustomField>
    <fullName>DM_Parcel__c</fullName>
    <formula>DM_Field__r.DM_Parcel__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parcel</label>
    <type>Text</type>
</CustomField>