force-app/main/default/objects/DM_Production__c/fields/DM_Passed_Inspection__c.field-meta.xml
<CustomField>
    <fullName>DM_Passed_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed Inspection</label>
    <type>Checkbox</type>
</CustomField>