force-app/main/default/objects/DM_Production__c/fields/DM_Pest_Control_Methods__c.field-meta.xml
<CustomField>
    <fullName>DM_Pest_Control_Methods__c</fullName>
    <label>Pest Control Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biological Control</fullName>
            </value>
            <value>
                <fullName>Companion Planting</fullName>
            </value>
            <value>
                <fullName>Trap Crops</fullName>
            </value>
            <value>
                <fullName>Row Covers &amp; Netting</fullName>
            </value>
            <value>
                <fullName>Botanical Pesticides</fullName>
            </value>
            <value>
                <fullName>Microbial Pesticides</fullName>
            </value>
            <value>
                <fullName>Physical &amp; Mechanical Control</fullName>
            </value>
            <value>
                <fullName>Soil Solarization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>