force-app/main/default/objects/DM_Production__c/fields/DM_Planned_Harvest_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Planned_Harvest_Date__c</fullName>
    <label>Planned Harvest Date</label>
    <type>Date</type>
</CustomField>