force-app/main/default/objects/DM_Production__c/fields/DM_Planned_Yield__c.field-meta.xml
<CustomField>
    <fullName>DM_Planned_Yield__c</fullName>
    <label>Planned Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>