force-app/main/default/objects/DM_Production__c/fields/DM_Planting_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Planting_Date__c</fullName>
    <label>Planting Date</label>
    <type>Date</type>
</CustomField>