force-app/main/default/objects/DM_Production__c/fields/DM_Planting_Method__c.field-meta.xml
<CustomField>
    <fullName>DM_Planting_Method__c</fullName>
    <label>Planting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Seeding</fullName>
            </value>
            <value>
                <fullName>Transplanting</fullName>
            </value>
            <value>
                <fullName>Broadcast Seeding</fullName>
            </value>
            <value>
                <fullName>Drill Seeding</fullName>
            </value>
            <value>
                <fullName>Raised Bed Planting</fullName>
            </value>
            <value>
                <fullName>Intercropping</fullName>
            </value>
            <value>
                <fullName>Mulch Planting</fullName>
            </value>
            <value>
                <fullName>Hydroponic</fullName>
            </value>
            <value>
                <fullName>No-Till Planting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>