force-app/main/default/objects/DM_Production__c/fields/DM_Production_Activity__c.field-meta.xml
<CustomField>
    <fullName>DM_Production_Activity__c</fullName>
    <label>Production Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buffer Zone Maintenance</fullName>
            </value>
            <value>
                <fullName>Compost Production</fullName>
            </value>
            <value>
                <fullName>Compost Curing</fullName>
            </value>
            <value>
                <fullName>Cover Crop Termination</fullName>
            </value>
            <value>
                <fullName>Equipment Cleaning</fullName>
            </value>
            <value>
                <fullName>Irrigation Flushing</fullName>
            </value>
            <value>
                <fullName>Irrigation Inspection</fullName>
            </value>
            <value>
                <fullName>Packing / Processing</fullName>
            </value>
            <value>
                <fullName>Raised Bed Formation</fullName>
            </value>
            <value>
                <fullName>Soil Testing</fullName>
            </value>
            <value>
                <fullName>Thinning / Pruning</fullName>
            </value>
            <value>
                <fullName>Tillage</fullName>
            </value>
            <value>
                <fullName>Trellising / Staking</fullName>
            </value>
            <value>
                <fullName>Water Quality Testing</fullName>
            </value>
            <value>
                <fullName>Weeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>