force-app/main/default/objects/DM_Production__c/fields/DM_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Production_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Production Date</label>
    <type>Date</type>
</CustomField>