force-app/main/default/objects/DM_Production__c/fields/DM_Production_Notes__c.field-meta.xml
<CustomField>
    <fullName>DM_Production_Notes__c</fullName>
    <inlineHelpText>Record notes about planting methods, irrigation, pest control, weeding or any other topic related to this planting.</inlineHelpText>
    <label>Production Notes</label>
    <type>TextArea</type>
</CustomField>