force-app/main/default/objects/DM_Production__c/fields/DM_Production_Site__c.field-meta.xml
<CustomField>
    <fullName>DM_Production_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Production Site</label>
    <referenceTo>DM_Site__c</referenceTo>
    <relationshipLabel>Production</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>