force-app/main/default/objects/DM_Production__c/fields/DM_Production_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Production_Status__c</fullName>
    <label>Production Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>